--- a/templates/table.html
+++ b/templates/table.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sea Level Table</title>
+    <title>Sea Level Table - {{ sensor }}</title>
 </head>
 <body>
-    <h1>Sea Level Observations</h1>
-    <table border="1">
-        <tr><th>Date</th><th>Time</th><th>Sea Level (m)</th></tr>
-        {% for row in data %}
-        <tr>
-            <td>{{ row[1] }}</td>
-            <td>{{ row[2] }}</td>
-            <td>{{ row[3] }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    <h1 style="text-align: center;">Sea Level Observations - {{ sensor }}</h1>
+    <div style="text-align: center; margin-top: 50px;">
+        <table border="1" style="margin: 0 auto;">
+            <tr>
+                <th>Date</th>
+                <th>Max. Sea Level (m)</th>
+                <th>Ave. Sea Level (m)</th>
+                <th>Min. Sea Level (m)</th>
+            </tr>
+            {% for row in data %}
+            <tr>
+                <td>{{ row[0] }}</td>
+                <td>{{ '%.2f' | format(row[1]) }}</td>
+                <td>{{ '%.2f' | format(row[2]) }}</td>
+                <td>{{ '%.2f' | format(row[3]) }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </body>
 </html>
